--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,4 @@
 ehthumbs.db
 Thumbs.db
 
-35_MY35_SG36_MY36_SG37_MY37_SG38_MY38_MY238_SG38_SG_ACTIVE40_MY
+35_MY/35_SG/36_MY/36_SG/37_MY/37_SG/38_MY/38_MY2/38_SG/38_SG_ACTIVE/40_MY/
